# smp_dj_site

./: pyproject.toml
smp_dj_site/: manage.py
smp_dj_site/notes/: admin.py  models.py  urls.py  views.py
smp_dj_site/notes/migrations/: 0001_initial.py  0002_note_created_at_note_updated_at.py  0003_rename_tittle_note_title.py
smp_dj_site/notes/templates/: base.html  notes_list.html
smp_dj_site/smp_dj_site/: asgi.py  settings.py  urls.py  wsgi.py
